<resources>
    <string name="app_name">PortIn</string>
    <string name="portin_logo">Portin Logo</string>
    <string name="select_image">Select Image</string>
    <string name="internship_name">Internship Name</string>
    <string name="description">Description</string>
    <string name="start_date_yyyy_mm_dd">Start Date (YYYY-MM-DD)</string>
    <string name="end_date_yyyy_mm_dd">End Date (YYYY-MM-DD)</string>
    <string name="max_slots">Max Slots</string>
    <string name="add_internship">Add Internship</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_year">Birth Year</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember me</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="created_at">Created at</string>
    <string name="upload_syllabus_pdf">Upload Syllabus (PDF)</string>
    <string name="upload_transcript_txt">Upload Transcript (.txt)</string>
    <string name="extract_skills">Extract Skills</string>
    <string name="apply">Apply</string>
    <string name="applicant_name">Applicant Name</string>
    <string name="applied_at">Applied at</string>
    <string name="status_applied">Status: applied</string>
    <string name="in_review">In review</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="status_not_applied">Status: Not applied</string>
    <string name="edit_internship">Edit Internship</string>
    <string name="delete_internship">Delete Internship</string>
    <string name="home">Home</string>
    <string name="skills">Skills</string>
    <string name="settings">Settings</string>
    <string name="view_cv_pdf">View CV (PDF)</string>
    <string name="top_5_internships">Top 5 Internships</string>
    <string name="view_profile">View profile</string>
</resources>